fixed header z-index

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 1010;
     min-height: 60px;
     width: 100%;
     color: #ffffff;
